fixing overflow

--- a/css/style-fan-v1.css
+++ b/css/style-fan-v1.css
@@ -315,7 +315,7 @@ input::placeholder {
 /******************************************/
 .artist-card {
     width: 50vw;
-    height: 38vh;
+    height: 100%;
 }
 .object-fit-cover {
     object-fit: cover;
